# movie-bot

./: .gitignore  README.md  error_data_all_movies.py  error_data_slack_text.py  movie.py  pyproject.toml  slackTest.py  slackTextFormat.slack  test.html  test.js  test.json  test.py  testdata.py
.github/workflows/: deploy.yml
comic_bot/: comic.py
movie_bot/: movie.py
movie_bot/slackweb-1.0.5.dist-info/: RECORD
