[tool.poetry]
name = "movie-bot"
version = "0.1.0"
description = ""
authors = ["kyoF <fujiki.kyosuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
slackweb = "^1.0.5"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
